# napari-n5

./: .copier-answers.yml  LICENSE  README.md  justfile  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: test_and_deploy.yml
data/: .gitignore  generate_base.py  generate_data.py
data/n5viewer.n5/: attributes.json
data/n5viewer.n5/s0/: attributes.json
data/n5viewer.n5/s0/0/0/: 0  1  2  3
data/n5viewer.n5/s0/0/1/: 0  1  2  3
data/n5viewer.n5/s0/0/2/: 0  1  2  3
data/n5viewer.n5/s0/0/3/: 0  1  2  3
data/n5viewer.n5/s0/1/0/: 0  1  2  3
data/n5viewer.n5/s0/1/1/: 0  1  2  3
data/n5viewer.n5/s0/1/2/: 0  1  2  3
data/n5viewer.n5/s0/1/3/: 0  1  2  3
data/n5viewer.n5/s0/2/0/: 0  1  2  3
data/n5viewer.n5/s0/2/1/: 0  1  2  3
data/n5viewer.n5/s0/2/2/: 0  1  2  3
data/n5viewer.n5/s0/2/3/: 0  1  2  3
data/n5viewer.n5/s0/3/0/: 0  1  2  3
data/n5viewer.n5/s0/3/1/: 0  1  2  3
data/n5viewer.n5/s0/3/2/: 0  1  2  3
data/n5viewer.n5/s0/3/3/: 0  1  2  3
data/n5viewer.n5/s0/4/0/: 0  1  2  3
data/n5viewer.n5/s0/4/1/: 0  1  2  3
data/n5viewer.n5/s0/4/2/: 0  1  2  3
data/n5viewer.n5/s0/4/3/: 0  1  2  3
data/n5viewer.n5/s0/5/0/: 0  1  2  3
data/n5viewer.n5/s0/5/1/: 0  1  2  3
data/n5viewer.n5/s0/5/2/: 0  1  2  3
data/n5viewer.n5/s0/5/3/: 0  1  2  3
data/n5viewer.n5/s0/6/0/: 0  1  2  3
data/n5viewer.n5/s0/6/1/: 0  1  2  3
data/n5viewer.n5/s0/6/2/: 0  1  2  3
data/n5viewer.n5/s0/6/3/: 0  1  2  3
data/n5viewer.n5/s0/7/0/: 0  1  2  3
data/n5viewer.n5/s0/7/1/: 0  1  2  3
data/n5viewer.n5/s0/7/2/: 0  1  2  3
data/n5viewer.n5/s0/7/3/: 0  1  2  3
data/n5viewer.n5/s1/: attributes.json
data/n5viewer.n5/s1/0/0/: 0  1
data/n5viewer.n5/s1/0/1/: 0  1
data/n5viewer.n5/s1/1/0/: 0  1
data/n5viewer.n5/s1/1/1/: 0  1
data/n5viewer.n5/s1/2/0/: 0  1
data/n5viewer.n5/s1/2/1/: 0  1
data/n5viewer.n5/s1/3/0/: 0  1
data/n5viewer.n5/s1/3/1/: 0  1
data/n5viewer.n5/s2/: attributes.json
data/n5viewer.n5/s2/0/0/: 0
data/n5viewer.n5/s2/1/0/: 0
src/napari_n5/: __init__.py  _reader.py  napari.yaml  types.py
tests/: conftest.py  test_reader.py
