[project]
name = "napari-n5"
dynamic = ["version"]
description = "Support for reading N5 data in napari"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Chris Barnes"},
  {email = "chris.barnes@gerbi-gmb.de"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.11,<4.0"
# napari can be included in dependencies if napari imports are required.
# However, you should not include napari[all], napari[qt],
# or any other Qt bindings directly (e.g. PyQt5, PySide2).
# See best practices: https://napari.org/stable/plugins/building_a_plugin/best_practices.html
dependencies = [
    "pydantic>=2.13.4",
    "zarr-n5>=0.2.0",
    "fsspec[http]>=2026.4.0",
    "zarr>=3.1.6",
]

[project.optional-dependencies]
# Allow easily installation with the full, default napari installation
# (including Qt backend) using napari-n5[all].
all = ["napari[all]"]

[dependency-groups]
data = [
    "imageio>=2.37.3",
    "numpy>=2.3.5",
    "scikit-image>=0.26.0",
    "tensorstore>=0.1.84",
]
dev = [
    "tox-uv",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "npe2>=0.8.2",
    "ruff>=0.15.17",
    "pint>=0.25.3",
    {include-group = "data"},
]

[project.entry-points."napari.manifest"]
napari-n5 = "napari_n5:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/clbarnes/napari-n5/issues"
"Documentation" = "https://github.com/clbarnes/napari-n5#README.md"
"Source Code" = "https://github.com/clbarnes/napari-n5"
"User Support" = "https://github.com/clbarnes/napari-n5/issues"

[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_n5/_version.py"
fallback_version = "0.0.1+nogit"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
# filterwarnings = ["error"]  # recommended by PP309; deprecation warnings cause failures so leaving for the user to enable if desired
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long. handled by formatter
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "C408", # unnecessary `dict`. It's very necessary, thank you.
    "B905", # zip() without an explicit `strict`. I know?!
]
